--- a/package.json
+++ b/package.json
@@ -2,12 +2,20 @@
   "name": "comecando-com-react",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/cassiohub/comecando-com-react.git"
+  },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/cassiohub/comecando-com-react/issues"
+  },
+  "homepage": "https://github.com/cassiohub/comecando-com-react#readme",
   "dependencies": {
     "axios": "^0.15.2",
     "react": "^15.3.2",
@@ -16,7 +24,7 @@
   "devDependencies": {
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.7",
-    "babel-preset-react": "^6.16.0",
-    "webpack": "^1.13.3"
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0"
   }
 }
